# slack-credentials

./: README.md  pyproject.toml
src/slack_credentials/: __init__.py  cli.py  client.py  credentials.py
