[project]
name = "slack-credentials"
version = "0.1.0"
description = "Extract Slack desktop app credentials from macOS and use them for API access"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.6",
]

[project.scripts]
slack-credentials = "slack_credentials.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_credentials"]
